@startuml
' ============================================================
' ERD - Authentication System
' Project short name: auth
' NestJS + Better Auth + PostgreSQL + Drizzle ORM
' ============================================================

skinparam class {
  BackgroundColor #F8F8F8
  BorderColor #333333
  ArrowColor #333333
  AttributeFontSize 12
}
skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #666666
}

title Authentication System - Entity Relationship Diagram

' ============================================================
' MODULE: Authentication (Database: auth_db)
' Handles: user accounts, sessions, accounts (Better Auth), verification, roles
' Resolves: FR-001, FR-002, FR-003, FR-004, FR-005, FR-006, FR-012, FR-013
' ============================================================
package "Authentication Module" #E8F4E8 {
  entity "auth_users" as users {
    * id : uuid <<PK>>
    --
    * name : varchar(100)
    * email : varchar(255) <<UNIQUE>>
    * phone : varchar(20) <<UNIQUE>>
    * email_verified : boolean DEFAULT false
    * phone_verified : boolean DEFAULT false
    * image : text
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_sessions" as sessions {
    * id : varchar(255) <<PK>>
    --
    * user_id : uuid <<FK>>
    * expires_at : timestamp
    * token : varchar(255) <<UNIQUE>>
    * ip_address : varchar(45)
    * user_agent : text
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_accounts" as accounts {
    * id : varchar(255) <<PK>>
    --
    * user_id : uuid <<FK>>
    * account_id : varchar(255)
    * provider_id : varchar(50)
    * password : varchar(255)
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_verification" as verification {
    * id : varchar(255) <<PK>>
    --
    * identifier : varchar(255)
    * value : varchar(255)
    * expires_at : timestamp
    * created_at : timestamp
    * updated_at : timestamp
  }

  entity "auth_roles" as roles {
    * id : uuid <<PK>>
    --
    * name : varchar(50) <<UNIQUE>>
    * description : text
    * created_at : timestamp
  }

  entity "auth_user_roles" as user_roles {
    * id : uuid <<PK>>
    --
    * user_id : uuid <<FK>>
    * role_id : uuid <<FK>>
    * created_at : timestamp
  }
}

' ============================================================
' MODULE: SMS (Database: sms_db)
' Handles: SMS delivery logs, tracking, audit trail
' Resolves: FR-012, FR-013, DR-006
' ============================================================
package "SMS Module" #E0F7FA {
  entity "sms_logs" as sms_logs {
    * id : uuid <<PK>>
    --
    * user_id : uuid
    * phone : varchar(20)
    * message_type : varchar(50)
    * template_id : varchar(100)
    * status : enum('pending','sent','delivered','failed')
    * provider : varchar(50)
    * provider_message_id : varchar(255)
    * error_message : text
    * retry_count : int DEFAULT 0
    * idempotency_key : varchar(255) <<UNIQUE>>
    * created_at : timestamp
    * sent_at : timestamp
    * delivered_at : timestamp
  }
}

' ============================================================
' RELATIONSHIPS
' ============================================================

' --- Authentication ---
users ||--o{ sessions : "has"
users ||--o{ accounts : "has"
users ||--o{ user_roles : "assigned"
roles ||--o{ user_roles : "granted to"

' --- SMS (cross-database, application-level reference) ---
users ||--o{ sms_logs : "receives SMS"

@enduml
